# assemulator

./: CONTRIBUTING.md  Cargo.toml  DOCS.md  README.md  TODO.md
cpu/mira/programs/: array.asm  division.asm  multiplication.asm
cpu/photon/: cpu.rs  enums.rs
cpu/photon/programs/: add.asm  array.asm  collatz.asm  misc.asm  speed_test.asm
cpu/risc16/: README.md  cpu.rs  main.rs  opcode.rs
cpu/risc16/programs/: macros.asm  multiplication.asm  test.asm
cpu/subleq/: README.md
docs/: assembler.md  devnotes.md  ports.md
examples/load-store/: README.md
examples/load-store/programs/: multiplication.asm
examples/mira/: README.md  cpu.circ  enums.rs  main.rs  main2.rs  memory.rs
examples/mira/programs/: array.asm  collatz.asm  guessing_game.asm  insertion_sort.asm  misc.asm  multiplication.asm  popcount.asm  ports.asm  test.asm
examples/photon/: README.md  cpu.circ  enums.rs  main.rs
examples/photon/programs/: array.asm  collatz.asm  fibonacci.asm  hello_world.asm  insertion_sort.asm  misc.asm  test.asm  (+4 more)
examples/risc16/: README.md  cpu.circ  enums.rs  main.rs  opcode.rs
programs/risc16/: gameoflife.asm  hello.asm  multiplication.asm  test.asm
src/: assembler.rs  color.rs  cpu.rs  get_input.rs  grammar.pest  lib.rs  macro.rs  main.rs  mask.rs  port.rs  processor.rs  reg.rs  register.rs  screen.rs  util.rs  word.rs
src/assembler/: assembler.rs  assembler0.rs  assembler2.rs  expression.rs  grammar.pest  macros.rs  mod.rs  parser.rs  symbol_table.rs  template.rs
src/cpu/: mod.rs  reg.rs
src/cpus/: README.md  mod.rs
src/port/: mod.rs  state.rs  util.rs
(+54 files in other folders)
