[package]
name = "assemulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
enum-map = "2.3.0"
pest = "2.4.0"
pest_derive = "2.4.0"
strum = "0.24"
strum_macros = "0.24"
minifb = "0.23.0"
rand = "0.8.5"