[package]
name = "assemulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
minifb = "0.23.0"
rand = "0.8.5"
strum = "0.24"
strum_macros = "0.24"
pest = "2.7.0"
pest_derive = "2.4.0"

[[bin]]
path = "cpu/risc16/cpu.rs"
name = "risc16"


[[bin]]
path = "cpu/photon/cpu.rs"
name = "photon"

